--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -14,5 +14,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listViewLyrics"
-        android:layout_weight="1" />
+        android:layout_weight="1">
+    </ListView>
 </menu>
