--- a/app/src/main/res/layout/listview_artists_item.xml
+++ b/app/src/main/res/layout/listview_artists_item.xml
@@ -11,13 +11,13 @@
         android:adjustViewBounds="true"
         android:layout_weight="3"
         android:id="@+id/artistimage"
-        android:src="@drawable/drake"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content" />
+        android:src="@drawable/kendricklamar"
+        android:layout_width="50dp"
+        android:layout_height="50dp" />
 
         <TextView
             android:textSize="20sp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="40dp"
             android:textColor="#000000"
             android:layout_weight="7"
             android:layout_gravity="center"
