--- a/app/src/main/res/layout/listview_favorites_item.xml
+++ b/app/src/main/res/layout/listview_favorites_item.xml
@@ -1,65 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_margin="5dp"
-    android:padding="10dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    android:orientation="horizontal"
+    android:padding="10dp">
 
     <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_weight="1">-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:layout_weight="1">-->
 
-        <!--<ImageView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:id="@+id/star"-->
-            <!--android:src="@drawable/star"-->
-            <!--android:layout_weight="1"-->
-            <!--/>-->
+    <!--<ImageView-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:id="@+id/star"-->
+    <!--android:src="@drawable/star"-->
+    <!--android:layout_weight="1"-->
+    <!--/>-->
 
-        <!--<TextView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1"-->
-            <!--android:text="Favorites"/>-->
+    <!--<TextView-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:layout_weight="1"-->
+    <!--android:text="Favorites"/>-->
 
     <!--</LinearLayout>-->
 
-        <ImageView
-            android:adjustViewBounds="true"
-            android:layout_weight="3"
-            android:id="@+id/albumart"
-            android:src="@drawable/drakemorelife"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" />
+    <ImageView
+        android:id="@+id/albumart"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="3"
+        android:adjustViewBounds="true"
+        android:src="@drawable/drakemorelife" />
 
-        <LinearLayout
-            android:layout_marginLeft="10dp"
-            android:layout_gravity="center"
-            android:layout_weight="7"
-            android:orientation="vertical"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="10dp"
+        android:layout_weight="7"
+        android:orientation="vertical">
 
-            <TextView
-                android:textSize="20sp"
-                android:textColor="#000000"
-                android:text="Artist"
-                android:id="@+id/artist"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/artist"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Artist"
+            android:textColor="#000000"
+            android:textSize="20sp" />
 
-            <TextView
-                android:textSize="26sp"
-                android:textColor="#000000"
-                android:text="Lyrics"
-                android:id="@+id/lyrics"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-
+        <TextView
+            android:id="@+id/lyrics"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lyrics"
+            android:textColor="#000000"
+            android:textSize="26sp" />
+    </LinearLayout>
 
 
 </LinearLayout>
