--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -1,75 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <!--<LinearLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="461dp"-->
-    <!--android:orientation="vertical">-->
-
-    <!--<LinearLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:orientation="horizontal">-->
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
-        android:textSize="24dp"
-        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Popular"
         android:textColor="@android:color/black"
-        android:text="Popular" />
-
-    <!--</LinearLayout>-->
+        android:textSize="24dp" />
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="25">
+        android:layout_weight="25"
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/foresthillsdrive"/>
+            android:src="@drawable/foresthillsdrive" />
 
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/bigseanidecided"/>
+            android:src="@drawable/bigseanidecided" />
 
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/drakemorelife"/>
+            android:src="@drawable/drakemorelife" />
     </LinearLayout>
 
-    <!--<LinearLayout-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:orientation="horizontal">-->
-
     <TextView
-        android:textSize="24sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
         android:gravity="center"
-        android:text="Recently Added" />
+        android:text="Recently Added"
+        android:textColor="@android:color/black"
+        android:textSize="24sp" />
 
-    <!--</LinearLayout>-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:layout_weight="25">
+        android:layout_weight="25"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imageView"
@@ -82,15 +63,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/joeybadassallamerikkkanbadass"/>
+            android:src="@drawable/joeybadassallamerikkkanbadass" />
 
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@drawable/kendrickdamn"/>
+            android:src="@drawable/kendrickdamn" />
 
     </LinearLayout>
-    <!--</LinearLayout>-->
 
 </LinearLayout>
