--- a/app/src/main/res/layout/listview_artists_item.xml
+++ b/app/src/main/res/layout/listview_artists_item.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_margin="5dp"
-    android:padding="10dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    android:orientation="horizontal"
+    android:padding="10dp">
 
 
     <ImageView
-        android:adjustViewBounds="true"
-        android:layout_weight="3"
         android:id="@+id/artistimage"
-        android:src="@drawable/kendricklamar"
         android:layout_width="50dp"
-        android:layout_height="50dp" />
+        android:layout_height="50dp"
+        android:layout_weight="3"
+        android:adjustViewBounds="true"
+        android:src="@drawable/kendricklamar" />
 
-        <TextView
-            android:textSize="20sp"
-            android:layout_marginLeft="40dp"
-            android:textColor="#000000"
-            android:layout_weight="7"
-            android:layout_gravity="center"
-            android:text="Artist's Name"
-            android:id="@+id/artistname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/artistname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="40dp"
+        android:layout_weight="7"
+        android:text="Artist's Name"
+        android:textColor="#000000"
+        android:textSize="20sp" />
 
 </LinearLayout>
