--- a/app/src/main/res/layout/listview_artists_item.xml
+++ b/app/src/main/res/layout/listview_artists_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
@@ -9,11 +10,11 @@
 
     <ImageView
         android:id="@+id/artistimage"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_weight="3"
         android:adjustViewBounds="true"
-        android:src="@drawable/kendricklamar" />
+        android:src="@drawable/kendrickart" />
 
     <TextView
         android:id="@+id/artistname"
