--- a/app/src/main/res/layout/listview_artist_item.xml
+++ b/app/src/main/res/layout/listview_artist_item.xml
@@ -9,20 +9,21 @@
 
 
     <ImageView
-        android:id="@+id/artistimage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_weight="3"
+        android:id="@+id/artistImage"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:adjustViewBounds="true"
-        android:src="@drawable/kendrickart" />
+        android:layout_centerInParent="true"
+        android:src="@drawable/foresthillsdrive" />
 
     <TextView
-        android:id="@+id/artistname"
-        android:layout_width="wrap_content"
+        android:id="@+id/artistName"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginLeft="40dp"
-        android:layout_weight="7"
+        android:layout_gravity="center_vertical|left"
+        android:paddingLeft="10dp"
+        android:layout_weight="3"
         android:text="Artist's Name"
         android:textColor="#000000"
         android:textSize="20sp" />
