--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -12,7 +12,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="147dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,7 +33,6 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@android:color/darker_gray"/>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -55,25 +54,43 @@
             android:background="@android:color/darker_gray"/>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="47dp">
+            android:layout_height="wrap_content">
             <TextView
                 android:drawableLeft="@drawable/ic_lyrics"
                 android:drawableRight="@drawable/ic_rightarrow"
                 android:paddingRight="10dp"
-                android:id="@+id/lyricsAdLibs"
+                android:id="@+id/lyrics"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:text="   Lyrics &amp; Ad Libs"
+                android:text="   Lyrics"
                 android:textColor="#000000"
                 android:textSize="20sp" />
         </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:drawableLeft="@drawable/ic_adlib"
+                android:drawableRight="@drawable/ic_rightarrow"
+                android:paddingRight="10dp"
+                android:id="@+id/adlibs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="   Ad Libs"
+                android:textColor="#000000"
+                android:textSize="20sp" />
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"/>
     </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
 
     <TextView
         android:layout_width="match_parent"
