--- a/app/src/main/res/layout/listview_lyric_item.xml
+++ b/app/src/main/res/layout/listview_lyric_item.xml
@@ -34,8 +34,20 @@
 
         <TextView
             android:textSize="18sp"
+            android:text="Song Name"
+            android:id="@+id/lyricSongName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:textSize="18sp"
             android:text="Artist Name"
             android:id="@+id/lyricArtistName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:textSize="18sp"
+            android:text="Album Name"
+            android:id="@+id/lyricAlbumName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
