--- a/app/src/main/res/layout/listview_lyric_item.xml
+++ b/app/src/main/res/layout/listview_lyric_item.xml
@@ -51,4 +51,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/ic_share"
+        android:id="@+id/sharesong"/>
 </LinearLayout>
