fixed search to populate in categories accordingly

--- a/app/src/main/res/layout/listview_adlib_item.xml
+++ b/app/src/main/res/layout/listview_adlib_item.xml
@@ -38,4 +38,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:src="@drawable/ic_star"
+            android:id="@+id/adLibFavorite"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:src="@drawable/ic_share"
+            android:id="@+id/shareAdLibSong"/>
+
+    </LinearLayout>
 </LinearLayout>
