--- a/app/src/main/res/layout/listview_lyric_item.xml
+++ b/app/src/main/res/layout/listview_lyric_item.xml
@@ -51,10 +51,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
-    <ImageView
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:src="@drawable/ic_share"
-        android:id="@+id/sharesong"/>
+        android:orientation="vertical"
+        android:layout_gravity="center">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:src="@drawable/ic_star"
+            android:id="@+id/lyricFavorite"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:src="@drawable/ic_share"
+            android:id="@+id/shareLyricSong"/>
+
+    </LinearLayout>
+
 </LinearLayout>
