--- a/app/src/main/res/layout/listview_favorites_item.xml
+++ b/app/src/main/res/layout/listview_favorites_item.xml
@@ -44,12 +44,18 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/artist"
+            android:id="@+id/lyrics"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Artist"
+            android:text="Lyrics"
             android:textColor="#000000"
             android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/artist"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Artist"/>
     </LinearLayout>
 
 
